# Page-loader

./: .gitignore  Makefile  README.md  logger_config.cnf  pyproject.toml  setup.cfg
.github/workflows/: push.yml  tests.yml
page_loader/: __init__.py  add_scheme.py  download.py  download_link.py  file.py  folder.py  get_correct_name.py  get_response.py  is_same_domain.py  name_getter.py  page_parse.py  progress_downloader.py  url.py
page_loader/get_correct_name/: get_correct_file_name.py  get_correct_folder_name.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: ru-hexlet-io-courses.html
tests/fixtures/must_be/: ru-hexlet-io-courses.html
